[package]
name = "raincloud"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = {version = "0.28.1", features = []}
image = { version = "0.25", features = ["jpeg", "png"] }
egui = "0.28.1"
egui_extras = { version = "*", features = ["all_loaders"] }
env_logger = "0.11.5"
rfd = "0.14.1"
serde_json = "1.0.127"
serde = "1.0.209"
home = "0.5.9"
zip = "2.2.0"
ftp = "3.0.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
